<package format="3">
  <name>hsrb_gazebo_bringup</name>
  <version>2.1.0</version>
  <description> Bringup scripts for gazebo simulation </description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hsrb_base_controllers</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tmc_launch_ros_utils</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>