<package format="3">
  <name>hsrb_rviz_simulator</name>
  <version>2.1.0</version>
  <description>
    Launch files and basic configurations for HSR-B kinematic simulation.
  </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>
  <author>Masayuki Masuda</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hsrb_base_controllers</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>hsrb_manipulation_launch</exec_depend>
  <exec_depend>hsrb_pseudo_endeffector_controller</exec_depend>
  <exec_depend>hsrc_description</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tmc_launch_ros_utils</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>